# jeu-de-nim

./: .gitignore  Cargo.toml  README.md
src/: algo.rs  app.rs  graphique.rs  lib.rs  main.rs  qlearning.rs
src/app/: qlearning.rs
src/qlearning/: piles_et_action.rs
