[package]
name = "nim_game"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
rand = "0.8.5"
fxhash = "0.2.1"
num_cpus = "1.13"
derive_more = "0.99.17"
num-format = "0.4.0"