[package]
name = "jeu_de_nim"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
fxhash = "0.2.1"
num_cpus = "1.13"
derive_more = "0.99.17"
num-format = "0.4.0"
eframe = "0.17.0"